crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@480.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_data VALUES (8, '8496986223.64063724353165506167988570717591150432282238795309964705925283285060558038824227595710139960766584401003765241409149793494330798800');"
---
InsertStmt@0..178
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "num_data"
  Whitespace@20..21 " "
  SelectStmt@21..176
    Values@21..27 "VALUES"
    Whitespace@27..28 " "
    Ascii40@28..29 "("
    List@29..176
      AConst@29..30
        Iconst@29..30 "8"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      AConst@32..176
        Sconst@32..176 "'8496986223.640637243 ..."
  Ascii41@176..177 ")"
  Ascii59@177..178 ";"

