crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@481.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_data VALUES (9, '054863480.34685027005508022756223282084742813020271603840941647350440860843570182437301045468670059279379903480024743452620396345637401505220786389930600883087012615993343976556472498552535317826554614696684732913955544753638726438705858481670766245958647367500212800073774509075408148134050353551558174813940258910304990570172170811882520915334358633');"
---
InsertStmt@0..387
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "num_data"
  Whitespace@20..21 " "
  SelectStmt@21..385
    Values@21..27 "VALUES"
    Whitespace@27..28 " "
    Ascii40@28..29 "("
    List@29..385
      AConst@29..30
        Iconst@29..30 "9"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      AConst@32..385
        Sconst@32..385 "'054863480.3468502700 ..."
  Ascii41@385..386 ")"
  Ascii59@386..387 ";"

