crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@486.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE UNIQUE INDEX num_exp_mul_idx ON num_exp_mul (id1, id2);"
---
IndexStmt@0..62
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Unique@7..13 "UNIQUE"
  Whitespace@13..14 " "
  Index@14..19 "INDEX"
  Whitespace@19..20 " "
  Ident@20..35 "num_exp_mul_idx"
  Whitespace@35..36 " "
  On@36..38 "ON"
  Whitespace@38..39 " "
  RangeVar@39..50
    Ident@39..50 "num_exp_mul"
  Whitespace@50..51 " "
  Ascii40@51..52 "("
  IndexElem@52..55
    Ident@52..55 "id1"
  Ascii44@55..56 ","
  Whitespace@56..57 " "
  IndexElem@57..60
    Ident@57..60 "id2"
  Ascii41@60..61 ")"
  Ascii59@61..62 ";"

