crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@488.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE UNIQUE INDEX num_exp_ln_idx ON num_exp_ln (id);
---
IndexStmt@0..54
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Unique@7..13 "UNIQUE"
  Whitespace@13..14 " "
  Index@14..19 "INDEX"
  Whitespace@19..20 " "
  Ident@20..34 "num_exp_ln_idx"
  Whitespace@34..35 " "
  On@35..37 "ON"
  Whitespace@37..38 " "
  RangeVar@38..48
    Ident@38..48 "num_exp_ln"
  Whitespace@48..49 " "
  Ascii40@49..50 "("
  IndexElem@50..52
    Ident@50..52 "id"
  Ascii41@52..53 ")"
  Ascii59@53..54 ";"

