crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@489.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE UNIQUE INDEX num_exp_log10_idx ON num_exp_log10 (id);
---
IndexStmt@0..60
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Unique@7..13 "UNIQUE"
  Whitespace@13..14 " "
  Index@14..19 "INDEX"
  Whitespace@19..20 " "
  Ident@20..37 "num_exp_log10_idx"
  Whitespace@37..38 " "
  On@38..40 "ON"
  Whitespace@40..41 " "
  RangeVar@41..54
    Ident@41..54 "num_exp_log10"
  Whitespace@54..55 " "
  Ascii40@55..56 "("
  IndexElem@56..58
    Ident@56..58 "id"
  Ascii41@58..59 ")"
  Ascii59@59..60 ";"

